// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitChunks > should apply antd/semi/... splitChunks rule when pkg is installed 1`] = `
{
  "cacheGroups": {
    "lib-antd": {
      "name": "lib-antd",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(antd\\)\\[\\\\\\\\/\\]/,
    },
    "lib-arco": {
      "name": "lib-arco",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(@\\?arco-design\\)\\[\\\\\\\\/\\]/,
    },
    "lib-axios": {
      "name": "lib-axios",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(axios\\|axios-\\.\\+\\)\\[\\\\\\\\/\\]/,
    },
    "lib-lodash": {
      "name": "lib-lodash",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(lodash\\|lodash-es\\)\\[\\\\\\\\/\\]/,
    },
    "lib-polyfill": {
      "name": "lib-polyfill",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(tslib\\|core-js\\|@babel\\\\/runtime\\|@swc\\\\/helpers\\)\\[\\\\\\\\/\\]/,
    },
    "lib-react": {
      "name": "lib-react",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react\\|react-dom\\|scheduler\\)\\[\\\\\\\\/\\]/,
    },
    "lib-router": {
      "name": "lib-router",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(react-router\\|react-router-dom\\|@remix-run\\\\/router\\|history\\)\\[\\\\\\\\/\\]/,
    },
    "lib-semi": {
      "name": "lib-semi",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]\\(@\\(ies\\|douyinfe\\)\\[\\\\\\\\/\\]semi-\\.\\*\\)\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "enforceSizeThreshold": 50000,
}
`;

exports[`splitChunks > should not apply splitChunks rule when strategy is not split-by-experience 1`] = `
{
  "cacheGroups": {
    "singleVendor": {
      "chunks": "all",
      "enforce": true,
      "name": "vendor",
      "priority": 0,
      "reuseExistingChunk": true,
      "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
    },
  },
  "chunks": "all",
  "enforceSizeThreshold": 50000,
}
`;

exports[`transformImport > should apply antd & arco transformImport 1`] = `
{
  "exclude": [
    "<ROOT>/node_modules/<PNPM_INNER>/core-js",
  ],
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
  ],
  "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "coreJs": "3.32",
          "mode": "usage",
          "shippedProposals": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "exclude": [],
        "inlineSourcesContent": true,
        "isModule": "unknown",
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": true,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "react": {
              "development": true,
              "refresh": true,
              "runtime": "automatic",
            },
          },
        },
        "minify": false,
        "rspackExperiments": {
          "import": [
            {
              "camelToDashComponentName": false,
              "libraryDirectory": "es",
              "libraryName": "@arco-design/web-react",
              "style": true,
            },
            {
              "camelToDashComponentName": false,
              "libraryDirectory": "react-icon",
              "libraryName": "@arco-design/web-react/icon",
            },
          ],
        },
        "sourceMaps": true,
      },
    },
  ],
}
`;

exports[`transformImport > should not apply antd & arco when transformImport is false 1`] = `
{
  "exclude": [
    "<ROOT>/node_modules/<PNPM_INNER>/core-js",
  ],
  "include": [
    {
      "and": [
        "<ROOT>",
        {
          "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      ],
    },
  ],
  "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
  "type": "javascript/auto",
  "use": [
    {
      "loader": "builtin:swc-loader",
      "options": {
        "env": {
          "coreJs": "3.32",
          "mode": "usage",
          "shippedProposals": true,
          "targets": [
            "chrome >= 87",
            "edge >= 88",
            "firefox >= 78",
            "safari >= 14",
          ],
        },
        "exclude": [],
        "inlineSourcesContent": true,
        "isModule": "unknown",
        "jsc": {
          "externalHelpers": true,
          "parser": {
            "decorators": true,
            "syntax": "typescript",
            "tsx": true,
          },
          "preserveAllComments": true,
          "transform": {
            "decoratorMetadata": true,
            "legacyDecorator": true,
            "react": {
              "development": true,
              "refresh": true,
              "runtime": "automatic",
            },
          },
        },
        "minify": false,
        "sourceMaps": true,
      },
    },
  ],
}
`;
